--- a/AT.Extensions/AT.Extensions.csproj
+++ b/AT.Extensions/AT.Extensions.csproj
@@ -63,8 +63,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <RepositoryType>git</RepositoryType>
-    <Version>1.0.0.1</Version>
+    <Version>1.0.0.30</Version>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>Logo.jpg</PackageIcon>
   </PropertyGroup>
 
   <!-- 
@@ -95,6 +96,10 @@
     <ProjectReference Include="..\AT.Infrastructure\AT.Infrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Logo.jpg">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
