--- a/AT.Extensions/AT.Extensions.csproj
+++ b/AT.Extensions/AT.Extensions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0;net8.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageOutputPath>..\[ Setup ]</PackageOutputPath>
@@ -78,35 +78,28 @@
       <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
-  
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net7.0' ">
+
+  <ItemGroup>
     <ProjectReference Include="..\AT.Enums\AT.Enums.csproj" />
     <ProjectReference Include="..\AT.Infrastructure\AT.Infrastructure.csproj" />
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
-    <PackageReference Include="Mime-Detective" Version="24.7.1" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="3.2.0" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
-    <ProjectReference Include="..\AT.Enums\AT.Enums.csproj" />
-    <ProjectReference Include="..\AT.Infrastructure\AT.Infrastructure.csproj" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
     <PackageReference Include="Mime-Detective" Version="24.7.1" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="4.0.0" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="4.0.0" />
+    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="4.0.2" />
+    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="4.2.0" />
+    <PackageReference Include="System.DirectoryServices" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
-    <ProjectReference Include="..\AT.Enums\AT.Enums.csproj" />
-    <ProjectReference Include="..\AT.Infrastructure\AT.Infrastructure.csproj" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.8" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
     <PackageReference Include="Mime-Detective" Version="24.7.1" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="4.0.0" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="4.0.0" />
+    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="4.0.2" />
+    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="4.2.0" />
+    <PackageReference Include="System.DirectoryServices" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
