--- a/AT.Extensions/AT.Extensions.csproj
+++ b/AT.Extensions/AT.Extensions.csproj
@@ -88,18 +88,28 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
     <PackageReference Include="Mime-Detective" Version="24.7.1" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="4.0.2" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="4.2.0" />
+    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="4.1.0" />
+    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="4.3.0" />
     <PackageReference Include="System.DirectoryServices" Version="9.0.3" />
+    <PackageReference Include="MongoDB.Bson" Version="3.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.14" />
   </ItemGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.3" />
     <PackageReference Include="Mime-Detective" Version="24.7.1" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="4.0.2" />
-    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="4.2.0" />
+    <PackageReference Include="SharperHacks.CoreLibs.Constants" Version="4.1.0" />
+    <PackageReference Include="SharperHacks.CoreLibs.Constraints" Version="4.3.0" />
     <PackageReference Include="System.DirectoryServices" Version="9.0.3" />
+    <PackageReference Include="MongoDB.Bson" Version="3.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3" />
   </ItemGroup>
 
 </Project>
