--- a/Source/AT.Extensions/AT.Extensions.csproj
+++ b/Source/AT.Extensions/AT.Extensions.csproj
@@ -4,66 +4,27 @@
 		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<PackageOutputPath>..\[ Setup ]</PackageOutputPath>
+		<PackageOutputPath>..\..\[ Setup ]</PackageOutputPath>
 		<PackageId>AT.Extensions.Library</PackageId>
 		<Title>Extensions (Library)</Title>
 		<Authors>Amirreza Tabeshfard</Authors>
 		<Company>WebNest [Feature]</Company>
-		<Description>The primary goal of creating this «Nuget: AT.Extensions.Library» is to enable developers to effortlessly and confidently utilize this «Library» instead of spending time and effort creating numerous and scattered «Extension Methods» in their projects. This approach not only enhances the efficiency and speed of project development but also significantly contributes to the standardization and integration of code. By leveraging this «Library», developers can benefit from advanced features and optimizations, allowing them to focus on the core and critical aspects of their projects. This strategy not only improves the productivity of development teams but also reduces errors and issues arising from repetitive and non-standard code. Additionally, using this «Library» allows developers to tap into collective experiences and knowledge, avoiding the need to reinvent the wheel and instead relying on proven and efficient solutions. Consequently, projects progress more rapidly, and the final product's quality is significantly enhanced.</Description>
+		<Description>The **AT.Extensions.Library** is a powerful, comprehensive, and highly purposeful collection of extension methods designed for the .NET platform. It has been developed with a modern, professional, and well-structured approach to enhance code quality, simplify software development, and increase developer productivity. By offering a wide range of pre-built and thoroughly tested extension methods, this library enables developers to avoid repeatedly writing similar code across different projects. Instead, they can leverage a standardized, optimized, and reliable set of utility functions that have been carefully implemented and validated in real-world development scenarios. These methods are built upon common programming patterns and clean code principles, ensuring they are suitable for a wide variety of applications—from small personal projects to large-scale enterprise systems. Using this library not only results in significant time savings during development but also leads to higher-quality code, easier maintenance, and a reduced risk of common programming errors. As a result, development teams can focus their efforts on innovation, designing advanced architectures, and solving complex, domain-specific challenges rather than wasting time on repetitive, low-value tasks.
+
+One of the key advantages of this library is its modular and well-organized structure, which categorizes extension methods into different namespaces based on their functionality and purpose. This means that a developer only needs to include the appropriate `using` directive for the desired namespace at the top of their code file to immediately gain access to a rich set of precise and useful methods—without the need to import multiple libraries or rewrite boilerplate code. For example, if a developer needs helper methods for working with strings or DateTime objects, they can simply include the dedicated namespace for that area and instantly access a complete set of relevant extensions. Therefore, **AT.Extensions.Library** is not just a tool for accelerating the development process—it is a smart framework that promotes higher efficiency, improved code readability, better testability, and consistent coding practices across all layers of a software project.</Description>
 		<Product>AT.Extensions.Library</Product>
-		<Copyright>Copyright 2024 (c) Amirreza Tabeshfard. All rights reserved.</Copyright>
+		<Copyright>Copyright 2026 (c) Amirreza Tabeshfard. All rights reserved.</Copyright>
 		<PackageProjectUrl>https://github.com/amirreza-tabeshfard/AT.Extensions.Library</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/amirreza-tabeshfard/AT.Extensions.Library</RepositoryUrl>
-		<PackageTags>
-			Extension;
-			Extensions;
-			Char;
-			Chars;
-			CharExtension;
-			CharExtensions;
-			CharsExtension;
-			CharsExtensions;
-			DateTime;
-			DateTimes;
-			DateTimeExtension;
-			DateTimeExtensions;
-			DateTimesExtension;
-			DateTimesExtensions;
-			DirectoryInfo;
-			DirectoryInfos;
-			DirectoryInfoExtension;
-			DirectoryInfoExtensions;
-			DirectoryInfosExtension;
-			DirectoryInfosExtensions;
-			FileInfo;
-			FileInfos;
-			FileInfoExtension;
-			FileInfoExtensions;
-			FileInfosExtension;
-			FileInfosExtensions;
-			HttpHandler;
-			HttpHandlers;
-			HttpHandlerExtension;
-			HttpHandlerExtensions;
-			HttpHandlersExtension;
-			HttpHandlersExtensions;
-			String;
-			Strings;
-			StringExtension;
-			StringExtensions;
-			StringsExtension;
-			StringsExtensions;
-			XML;
-			XMLs;
-			XMLExtension;
-			XMLExtensions;
-			XMLsExtension;
-			XMLsExtensions;
-		</PackageTags>
+		<PackageTags>Extension;
+Extensions;
+XML;
+XMLExtension;
+XMLExtensions;</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<RepositoryType>git</RepositoryType>
-		<Version>1.0.0.76</Version>
+		<Version>2.0-Preview-01</Version>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>Logo.jpg</PackageIcon>
 	</PropertyGroup>
